full refactoring on the project

--- a/public/tour.html
+++ b/public/tour.html
@@ -246,7 +246,7 @@
 
         const map = new mapboxgl.Map({
           container: 'map',
-          style: 'mapbox://styles/%name%/cjnxfn3zk7bj52rpegdltx58h',
+          style: 'mapbox://styles/jonasschmedtmann/cjnxfn3zk7bj52rpegdltx58h',
           scrollZoom: false
         });
 
@@ -515,7 +515,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <p class="footer__copyright">
-        &copy; by Raul M. All rights reserved.
+        &copy; by Jonas Schmedtmann. All rights reserved.
       </p>
     </div>
   </body>
